[package]
name = "rebooto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
# efivar = "2.0.0"
efivar = { path = "efivar-rs/efivar" }
once_cell = "1.19.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System", "Win32_Foundation", "Win32_System_Shutdown", "Win32_System_Threading", "Win32_Security"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3.14.1"

[workspace]
members = ["efivar-rs/efivar"]
